# genealogy-manager

./: .envrc  .gitignore  README.md  default.nix  pyproject.toml
doc/: tree-design.md
scripts/: test_preview.py
src/gmlib/: __init__.py  _lorem.py  models.py
src/gmui/: __main__.py  about_dialog.py  app.py  canvas.py  config.py  dialog.py  error.py  info_dock.py  window.py
tests/gmlib/: test_gmlib.py  test_models.py
